# tracker_pc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: api.md  test_scenarios.md
installer/: pinple.iss
migrations/: 0001_init.sql
migrations/server/: 0001_pc_agent_v2_backend.mssql.sql  0004_explanation_type.mssql.sql  0004b_explanation_type_finalize.mssql.sql  0005_drop_heartbeat_residue.mssql.sql  0006_pcagt_policy_defaults.mssql.sql  0007_pcagt_policy_audit.mssql.sql  0008_explanation_other_type.mssql.sql  0009_pcagt_kst_views.mssql.sql  0010_pcagt_policy_timezone.mssql.sql  0011_pcagt_local_views.mssql.sql  0012_pcagt_idle_segment_indexes.mssql.sql
src/: app.rs  config.rs  constants.rs  main.rs
src/api/: client.rs  endpoints.rs  mock.rs  mod.rs  types.rs
src/auth/: mod.rs  token_store.rs
src/data/: mod.rs
src/data/api/: client.rs  endpoints.rs  mock.rs  mod.rs
src/data/dto/: _legacy_types.rs  explanation_type_admin_dto.rs  explanation_type_dto.rs  login_dto.rs  main_info_dto.rs  mod.rs  pay_use_dto.rs  policy_patch_dto.rs  user_info_dto.rs  work_status_dto.rs
src/data/local/: README.md  explanations_repo.rs  idle_segments_repo.rs  mod.rs  settings_repo.rs
src/data/repository/: attendance_repository.rs  auth_repository.rs  mod.rs  (+5 more)
src/db/: auth_repo.rs  events_repo.rs  explanations_repo.rs  idle_segments_repo.rs  mod.rs  settings_repo.rs
src/device/: mod.rs
src/domain/: mod.rs
src/lunch/: mod.rs
src/monitor/: idle_detector.rs  input.rs  lifecycle.rs  mod.rs  policy.rs  session_events.rs
src/notify/: mod.rs
src/platform/: credential_store.rs  device.rs  mod.rs
src/sync/: attendance_sync.rs  event_sync.rs  heartbeat.rs  mod.rs  policy_sync.rs  update_check.rs
src/ui/: disabled_view.rs  explanation_input_view.rs  explanation_list_view.rs  login_view.rs  mod.rs  settings_view.rs  status_view.rs  tray.rs  update_view.rs
src/util/: mod.rs
(+35 files in other folders)
